--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Webflix - Streaming Media Theme - Homepage v1</title>
+        <title>Streaming Media Theme - Homepage v1</title>
         <link rel="apple-touch-icon-precomposed" href="assets/img/apple-touch-icon.png">
         <!--     Include UIKit CSS   -->
         <link rel="stylesheet" href="assets/css/uikit.min.css">
