--- a/index.html
+++ b/index.html
@@ -81,15 +81,14 @@
                     <div id="tm-left-section" class="uk-width-medium-3-10 uk-width-large-2-10 uk-hidden-small">
                         <div class="uk-panel">
                             <ul class="uk-nav  uk-nav-side uk-nav-parent-icon uk-margin-bottom" data-uk-nav="">
-                                <li class="uk-active"><a href="#">Featured</a></li>
-                                <li><a href="#">Movies</a></li>
-                                <li><a href="#">TV Shows</a></li>
-                                <li><a href="#">Music</a></li>
+                                <li class="uk-active"><a href="#">Destacados</a></li>
+                                <li><a href="#">En Linea</a></li>
+                                <li><a href="#">Todos</a></li>
                                 <li class="uk-parent ">
-                                    <a href="#">Genre</a>
+                                    <a href="#">Juegos</a>
                                     <ul class="uk-nav-sub">
-                                        <li><a href="#">Action</a></li>
-                                        <li><a href="#">Animation</a> </li>
+                                        <li><a href="#">League of legends</a></li>
+                                        <li><a href="#">CS : GO</a> </li>
                                         <li><a href="#">Anime</a> </li>
                                         <li><a href="#">Adventure</a> </li>
                                         <li><a href="#">Biography</a> </li>
@@ -99,6 +98,7 @@
                                         <li><a href="#">Documentary</a> </li>
                                     </ul>
                                 </li>
+                                <li><a href="#">Patrocinadores</a></li>
                                 <li class="uk-nav-divider"></li>
                             </ul>
                             <ul class="uk-nav uk-nav-comments uk-nav-side" data-uk-nav="">
