cambios en el formulario de perfil

--- a/formularioPerfil.html
+++ b/formularioPerfil.html
@@ -45,20 +45,30 @@
                 <div class=" uk-vertical-align-middle uk-text-center  uk-width-medium-3-10 uk-width-large-2-10 uk-container-center">
 
                     <div class="uk-margin-large-bottom  uk-animation-reverse uk-animation-scale uk-animation-hover">
-                        <img class="uk-margin uk-margin-remove" width="200" height="40" alt="logo" src="assets/img/logo.svg"/>
+                        <img class="uk-margin uk-margin-remove" width="200" height="40" alt="logo" src="assets/img/logo21.png"/>
                     </div>
                     <form  class=" uk-form">
-                        <h2 class="uk-margin-large-bottom uk-text-muted">Sign up</h2>
-                        <div class="uk-form-row">
-                            <a href="#" class="uk-button uk-button-social uk-width-1-4 uk-button-facebook uk-margin-right"><i class="uk-icon-medium uk-icon-facebook"></i></a>
-                            <a href="#" class="uk-button uk-button-social uk-width-1-4 uk-button-twitter uk-margin-right "><i class="uk-icon-medium uk-icon-twitter"></i></a>
-                            <a href="#" class="uk-button uk-button-social uk-width-1-4  uk-button-google "><i class="uk-icon-medium uk-icon-google-plus"></i></a>
-                            <p class="uk-text-center uk-margin-large-top">OR</p>
-                        </div>
+                        <h2 class="uk-margin-large-bottom uk-text-muted">Datos del perfil</h2>
+
                         <div class="uk-form-row">
                             <div class="uk-form-icon uk-form-icon-flip uk-width-1-1">
                                 <input type="text" class="uk-width-1-1" placeholder="Username">
                                 <i class="uk-icon-user"></i>
+                            </div>                    </div>
+                             <div class="uk-form-row">
+                            <div class="uk-form-icon uk-form-icon-flip uk-width-1-1">
+                                <input type="text" class="uk-width-1-1" placeholder="Nombre">
+                                <i class="uk-icon-user"></i>
+                            </div>                    </div>
+                             <div class="uk-form-row">
+                            <div class="uk-form-icon uk-form-icon-flip uk-width-1-1">
+                                <input type="text" class="uk-width-1-1" placeholder="Apellidos">
+                                <i class="uk-icon-user"></i>
+                            </div>                    </div>
+                             <div class="uk-form-row">
+                            <div class="uk-form-icon uk-form-icon-flip uk-width-1-1">
+                                <input type="text" class="uk-width-1-1" placeholder="Canal">
+                                <i class="uk-icon-twitch"></i>
                             </div>                    </div>
                             <div class="uk-form-row">
                                 <div class="uk-form-icon uk-form-icon-flip uk-width-1-1">
@@ -67,14 +77,12 @@
                                 </div>                    </div>
                                 <div class="uk-form-row">
                                     <div class="uk-form-icon uk-form-icon-flip uk-width-1-1" >
-                                        <input type="password"  class="uk-width-1-1" placeholder="Password">
+                                        <input type="password"  class="uk-width-1-1" placeholder="Nueva Contraseña">
                                         <i class="uk-icon-lock "></i>
                                     </div>                    </div>
-                                    <div class="uk-form-row uk-text-small">
-                                        <label class="uk-float-left"><input type="checkbox"> I agree to the Terms &amp; Conditions</label>
-                                    </div>
+
                                     <div class="uk-form-row">
-                                        <a class="uk-width-1-1 uk-button uk-button-primary uk-button-large" href="#">Sign up</a>
+                                        <a class="uk-width-1-1 uk-button uk-button-primary uk-button-large" href="#">Guardar</a>
                                     </div>
 
                                 </form>
